css/components/_clients.scss
.clients {
    padding: 4rem 0;
    .clients-list {
        display: flex;
        flex-wrap: wrap;

        .client {
            display: flex;
            align-items: center;
            width: 100%;
            margin: 2% 1%;
            box-sizing: border-box;

            a {
                margin: auto;

                img {
                    max-width: 100%;
                    width: auto;
                    height: auto;
                    max-height: 100px;
                    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
                    filter: grayscale(100%);
                    opacity: 0.6;
                    transition: all 300ms ease;
                }
    
                &:hover img {
                    -webkit-filter: none; /* Safari 6.0 - 9.0 */
                    filter: none;
                    opacity: 1;
                }
            }

            @media (min-width: 500px) {
                width: calc(96%/2);
                padding: 3%;
                margin: 1% 1%;
            }

            @media (min-width: 667px) {
                width: calc(94%/3);
                padding: 2%;
            }

            @media (min-width: 860px) {
                padding: 1%;
            }
        }
    }
}

